# data-driven-reweighting

./: .gitignore  .gitlab-ci.yml  README.md  compile.sh  config_1l.cfg  config_2l.cfg  recompile.sh
Analysis/: Output.cpp  doWeightApplication.py  output  output.cpp  reweighting_1l.root
Condor/: .gitignore  HT_submit.py  reweight.sh  submit.sh  submit.sub
Condor/error_old/: error_Job_config_1l_nominal_PP8.cfg_.1022810.err  error_Job_config_1l_nominal_PP8.cfg_.1034170.err  error_Job_config_1l_nominal_PP8.cfg_.1043690.err  error_Job_config_1l_nominal_PP8.cfg_.1043710.err  error_Job_config_1l_nominal_PP8.cfg_.1044060.err
Condor/output_old/: output_Job_config_1l_nominal_PP8.cfg_.1034160.out  output_Job_config_1l_nominal_PP8.cfg_.1034170.out  output_Job_config_1l_nominal_PP8.cfg_.1034180.out  output_Job_config_1l_nominal_PP8.cfg_.1034200.out  output_Job_config_1l_nominal_PP8.cfg_.1034220.out  output_Job_config_1l_nominal_PP8.cfg_.1043690.out  output_Job_config_1l_nominal_PP8.cfg_.1043710.out  output_Job_config_1l_nominal_PP8.cfg_.1044060.out
Configs/: config_1l.cfg  config_2l.cfg
Reweighter/: CMakeLists.txt  main.cxx
Reweighter/Reweighter/: Regions.h
output/: reweighting_1l.root  root_to_txt.py
output/FSR_DO/: binning_1l_FSR_DO.txt  reweighting_1l_FSR_DO.txt
output/FSR_UP/: binning_1l_FSR_UP.txt  reweighting_1l_FSR_UP.txt
output/PH7/: binning_1l_PH7.txt  reweighting_1l_PH7.txt
output/Scale_DO/: binning_1l_Scale_DO.txt
output/Scale_UP/: reweighting_1l_Scale_UP.txt
output/nominal/: binning_1l_nominal.txt  reweighting_1l_nominal.txt
(+44 files in other folders)
